recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:2: error: '(' expected but identifier found.
  for k <- 0 to 3 {
      ^FourSquare:5: error: illegal start of simple expression
  def carre {
  ^